# lfind

./: .gitignore  IMPLEMENTATION_RULES.md  LICENSE  MANIFEST.in  PROJECT_GOALS.md  README.md  ROADMAP.md  project.md  pyproject.toml  pytest.ini  repopack-output.txt  summary.md
.lfind/: metadata.db
src/lfind/: __init__.py  cache_manager.py  config.json  config.py  db_manager.py  embed_manager.py  faiss_utils.py  index_manager.py  llm_service.py  main.py  output_builder.py  requirements.txt  search_pipeline.py  tree_builder.py
src/lfind/embedding/: __init__.py  base.py  registry.py  service.py
src/lfind/embedding/file_embedders/: __init__.py  pdf_embedder.py  text_embedder.py
src/lfind/embedding/models/: __init__.py  embedding_model.py  openai_embeddings.py  sentence_transformers.py
tests/: run_all_tests.py  test_basic.py  test_embeddings.py  test_index_manager.py  test_search_pipeline.py
